--- a/Styles/index.css
+++ b/Styles/index.css
@@ -9,12 +9,11 @@ body {
 }
 
 #titel {
-    height: 100%;
     width: 100%;
-    margin: 0 auto;
+    margin: auto;
     text-align: center;
     padding-left: auto;
-    padding-top: 35px;
+    padding-top: 5%;
     clear: both;
     font-size: 30pt;
     font-family: 'Mohave', sans-serif;
@@ -35,7 +34,7 @@ body {
     height: 100%;
     width: 100%;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 4%;
     font-size: 17pt;
     font-family: 'Mohave', sans-serif;
 }
@@ -54,18 +53,18 @@ body {
     width: 100%;
     text-align: center;
     padding-left: auto;
-    padding-top: 250px;
+    padding-top: 15%;
     font-size: 35pt;
     font-family: 'Mohave', sans-serif;
 }
 
 .raum_e {
-    padding-right: 230px;
-    padding-bottom: 150px;
-    padding-left: 230px;
-    padding-top: 150px;
+    padding-right: 10%;
+    padding-bottom: 7%;
+    padding-left: 10%;
+    padding-top: 7%;
     border-style: solid;
-    margin-right: 30px;
+    margin-right: 3%;
 }
 
 
