--- a/Styles/raum.css
+++ b/Styles/raum.css
@@ -14,7 +14,7 @@ body {
     margin: 0 auto;
     text-align: center;
     padding-left: auto;
-    padding-top: 35px;
+    padding-top: 5%;
     clear: both;
     font-size: 30pt;
     font-family: 'Mohave', sans-serif;
