--- a/Styles/index.css
+++ b/Styles/index.css
@@ -4,16 +4,15 @@
 body {
     background-size: cover;
     background-attachment: fixed;
-    margin: 0px;
-    padding-top: 0px;
 }
 
 #titel {
+    height: 100%;
     width: 100%;
-    margin: auto;
+    margin: 0 auto;
     text-align: center;
     padding-left: auto;
-    padding-top: 5%;
+    padding-top: 3%;
     clear: both;
     font-size: 30pt;
     font-family: 'Mohave', sans-serif;
@@ -34,7 +33,7 @@ body {
     height: 100%;
     width: 100%;
     text-align: center;
-    padding-top: 4%;
+    padding-top: 1%;
     font-size: 17pt;
     font-family: 'Mohave', sans-serif;
 }
@@ -67,7 +66,24 @@ body {
     margin-right: 3%;
 }
 
+#raum_u {
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    padding-left: auto;
+    padding-top: 20%;
+    font-size: 35pt;
+    font-family: 'Mohave', sans-serif;
+}
 
-
+.raum_ue {
+    padding-right: 10%;
+    padding-bottom: 7%;
+    padding-left: 10%;
+    padding-top: 7%;
+    border-style: solid;
+    margin-right: 3%;
+}
 
 
