--- a/Styles/index.css
+++ b/Styles/index.css
@@ -42,8 +42,6 @@ body {
     text-align: center;
     padding-left: auto;
     text-align: center;
-    text-decoration: none;
-    color: black;
 }
 
 #raum {
@@ -52,7 +50,7 @@ body {
     width: 100%;
     text-align: center;
     padding-left: auto;
-    padding-top: 15%;
+    padding-top: 10%;
     font-size: 35pt;
     font-family: 'Mohave', sans-serif;
 }
@@ -72,7 +70,7 @@ body {
     width: 100%;
     text-align: center;
     padding-left: auto;
-    padding-top: 20%;
+    padding-top: 17%;
     font-size: 35pt;
     font-family: 'Mohave', sans-serif;
 }
@@ -83,7 +81,13 @@ body {
     padding-left: 10%;
     padding-top: 7%;
     border-style: solid;
-    margin-right: 3%;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+
 
 
