--- a/Styles/raum.css
+++ b/Styles/raum.css
@@ -14,7 +14,7 @@ body {
     margin: 0 auto;
     text-align: center;
     padding-left: auto;
-    padding-top: 5%;
+    padding-top: 3%;
     clear: both;
     font-size: 30pt;
     font-family: 'Mohave', sans-serif;
@@ -28,6 +28,7 @@ body {
 #container {
     background-color: white;
     width: 100%;
+    height: 100%;
     margin: auto;
 }
 
@@ -38,4 +39,48 @@ body {
     padding-left: 350px;
     font-size: 18pt;
 }
+
+
+
+
+.dropbtn {
+  background-color: #1e90ff;
+  color: white;
+  padding-right: 70%;
+  padding-left: 70%;
+  padding-bottom: 25%;
+  padding-top: 25%;
+  font-size: 16px;
+  border: none;
+  font-family: 'Mohave', sans-serif;
+}
+
+.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  font-family: 'Mohave', sans-serif;
+}
+
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+
+.dropdown-content a:hover {background-color: #ddd;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {background-color: #00b2ee;}
+
+
 
