--- a/Styles/qrcode.css
+++ b/Styles/qrcode.css
@@ -4,8 +4,6 @@
 body {
     background-size: cover;
     background-attachment: fixed;
-    margin: 0px;
-    padding-top: 0px;
 }
 
 #titel {
@@ -28,21 +26,32 @@ body {
 #container {
     background-color: white;
     width: 100%;
-    height: 100%;
     margin: auto;
+    text-align: center;
 }
 
-#raum_id {
-    text-decoration: underline;
-    padding-top: 20px;
+
+
+
+
+.qrbtn {
     font-family: 'Mohave', sans-serif;
-    padding-left: 20%;
-    font-size: 18pt;
-    padding-right: 60%;
-    margin: auto;
+    font-size: 20pt;
+  }
+
+.btn_a {
+    padding-left: auto;
+    text-align: center;
+    font-family: 'Mohave', sans-serif;
+    font-size: 20pt;
 }
 
+#qrcode {
+    margin: auto;
+    padding-top: 3%;
+}
 
-
-
-
+.in_aa {
+    margin: auto;
+    margin-bottom: 4%;
+}
