--- a/Styles/raum.css
+++ b/Styles/raum.css
@@ -42,7 +42,33 @@ body {
     margin: auto;
 }
 
+#raum {
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    padding-left: auto;
+    padding-top: 10%;
+    font-size: 25pt;
+    font-family: 'Mohave', sans-serif;
+}
 
+#raum > a {
+    text-align: center;
+    padding-left: auto;
+    text-align: center;
+}
 
+.raum_e {
+    padding-right: 7%;
+    padding-bottom: 4%;
+    padding-left: 7%;
+    padding-top: 4%;
+    border-style: solid;
+    margin-right: 3%;
+}
 
-
+a {
+    text-decoration: none;
+    color: black;
+}
