Neu Anlegung und kleine Anpassungen an index.php

--- a/FullPHP/Styles/index.css
+++ b/FullPHP/Styles/index.css
@@ -93,3 +93,9 @@ a {
     font-family: 'Mohave', sans-serif;
     font-size: 20pt;
 }
+
+.qrbtnn {
+    font-family: 'Mohave', sans-serif;
+    font-size: 22pt;
+    
+}
