--- a/FullPHP/Styles/qrcode.css
+++ b/FullPHP/Styles/qrcode.css
@@ -37,7 +37,7 @@ body {
 .qrbtn {
     font-family: 'Mohave', sans-serif;
     font-size: 20pt;
-  }
+}
 
 .btn_a {
     padding-left: auto;
@@ -55,4 +55,10 @@ body {
 .in_aa {
     margin: auto;
     margin-bottom: 4%;
+}
+
+.qrbtnn {
+    font-family: 'Mohave', sans-serif;
+    font-size: 22pt;
+    text-align: right;
 }
