--- a/FullPHP/Styles/qrcode.css
+++ b/FullPHP/Styles/qrcode.css
@@ -49,10 +49,16 @@ body {
 #tischNummer {
     margin-left: 3%;
     padding-right: 3%;
+
+    padding-bottom: 0.5%;
+    padding-top: 0.5%;
 }
 
 #raumId {
     padding-right: 1%;
+    padding-bottom: 0.5%;
+    padding-top: 0.5%;
+    padding-left: 0.5%;
 }
 
 
@@ -62,10 +68,10 @@ body {
 }
 
 #btn_add {
-    padding-bottom: 1%;
+    padding-bottom: 0.5%;
     padding-right: 1.5%;
     padding-left: 1.5%;
-    padding-top: 1%;
+    padding-top: 0.5%;
     font-family: 'Mohave', sans-serif;
     font-size: 15pt;
 }
