--- a/FullPHP/Styles/tisch.css
+++ b/FullPHP/Styles/tisch.css
@@ -122,13 +122,32 @@ body {
     text-align: left;
     font-family: 'Mohave', sans-serif;
     font-size: 15pt;
-    margin-top: 2%;
+    margin-top: 4%;
 
     background-color: red;
     border-color: red;
     color: white;    
 
     border-radius: 10px;
+}
+
+#del_btnT {
+    text-align: right;
+    
+    font-family: 'Mohave', sans-serif;
+    font-size: 13pt;
+    margin-top: 0%;
+
+    background-color: red;
+    border-color: red;
+    color: white;    
+
+    border-radius: 10px;
+
+    padding-bottom: 0.5%;
+    padding-right: 1.5%;
+    padding-left: 1.5%;
+    padding-top: 0.5%;
 }
 
 .btn_d {
@@ -155,6 +174,7 @@ body {
     position: absolute;
     opacity: 0;
     top: 0;
+    bottom: 20%;
     right: -20px;
     transition: 0.5s;
 }
