--- a/FullPHP/Styles/tisch.css
+++ b/FullPHP/Styles/tisch.css
@@ -122,7 +122,8 @@ body {
     text-align: left;
     font-family: 'Mohave', sans-serif;
     font-size: 15pt;
-    margin-top: 4%;
+    margin-top: 10%;
+    margin-bottom: 0%;;
 
     background-color: red;
     border-color: red;
@@ -174,7 +175,6 @@ body {
     position: absolute;
     opacity: 0;
     top: 0;
-    bottom: 20%;
     right: -20px;
     transition: 0.5s;
 }
