--- a/FullPHP/Styles/tisch.css
+++ b/FullPHP/Styles/tisch.css
@@ -26,6 +26,7 @@ body {
 #container {
     background-color: white;
     width: 100%;
+    height: 100%;
     margin: auto;
 }
 
@@ -123,7 +124,7 @@ body {
     font-family: 'Mohave', sans-serif;
     font-size: 15pt;
     margin-top: 10%;
-    margin-bottom: 0%;;
+    z-index: -1;
 
     background-color: red;
     border-color: red;
@@ -137,18 +138,26 @@ body {
     
     font-family: 'Mohave', sans-serif;
     font-size: 13pt;
-    margin-top: 0%;
 
     background-color: red;
     border-color: red;
     color: white;    
 
-    border-radius: 10px;
+    height: 100%;
+    width: 100%;
 
-    padding-bottom: 0.5%;
-    padding-right: 1.5%;
-    padding-left: 1.5%;
-    padding-top: 0.5%;
+    border-radius: 6px;
+
+    position: relative;
+}
+
+.btn_table {
+    padding-bottom: 1.5%;
+    padding-right: 36%;
+    padding-left: 36%;
+    padding-top: 1.5%;
+
+    text-decoration: none;
 }
 
 .btn_d {
