--- a/FullPHP/Styles/tisch.css
+++ b/FullPHP/Styles/tisch.css
@@ -92,6 +92,8 @@ body {
     border-style: solid;
     align-self: center;
     width: 95%;
+
+    margin-bottom: 10%;
 }
 
 #backgroundGreen {
@@ -102,9 +104,19 @@ body {
     background-color: #FA502C;
 }
 
+#backgroundBlue {
+    background-color: #599ce7;
+}
+
+
 #output1 {
     padding-left: 20%;
     margin-bottom: 10%;
+    padding-right: 20%;
+}
+
+#output2 {
+    padding-left: 20%;
     padding-right: 20%;
 }
 
@@ -123,7 +135,7 @@ body {
     text-align: left;
     font-family: 'Mohave', sans-serif;
     font-size: 15pt;
-    margin-top: 10%;
+    margin-top: 20%;
     z-index: -1;
 
     background-color: red;
@@ -146,16 +158,19 @@ body {
     height: 100%;
     width: 100%;
 
-    border-radius: 6px;
+    border-radius: 8px;
 
     position: relative;
+
+    margin-bottom: 2%;
+    margin-top: 2%;
 }
 
 .btn_table {
-    padding-bottom: 1.5%;
-    padding-right: 36%;
-    padding-left: 36%;
-    padding-top: 1.5%;
+    padding-bottom: 1%;
+    padding-right: 8%;
+    padding-left: 8%;
+    padding-top: 1%;
 
     text-decoration: none;
 }
