--- a/FullPHP/Styles/tisch.css
+++ b/FullPHP/Styles/tisch.css
@@ -36,6 +36,7 @@ body {
     text-align: center;
     
     padding-top: 2.5%;
+    padding-bottom: 2%;
     font-size: 15pt;
     font-family: 'Mohave', sans-serif;
 }
