--- a/FullPHP/Styles/index.css
+++ b/FullPHP/Styles/index.css
@@ -45,6 +45,7 @@ body {
     text-align: center;
     
     margin-bottom: 8%;
+    margin-top: 5%;
     font-size: 14pt;
     font-family: 'Mohave', sans-serif;
 }
@@ -62,47 +63,33 @@ body {
     text-align: center;
     padding-left: auto;
     padding-top: 10%;
-    font-size: 35pt;
+    font-size: 25pt;
     font-family: 'Mohave', sans-serif;
     border-radius: 20px;
 }
 
 #raum_z {
-    margin: auto;
     height: 100%;
     width: 100%;
     text-align: center;
     padding-left: auto;
     padding-top: 5%;
-    font-size: 35pt;
+    font-size: 25pt;
     font-family: 'Mohave', sans-serif;
     border-radius: 20px;
+    padding-top: 3.5%;
 }
 
 .raum_e {
-    padding-right: 10%;
-    padding-bottom: 7%;
-    padding-left: 10%;
-    padding-top: 7%;
+    padding-right: 9%;
+    padding-bottom: 6%;
+    padding-left: 9%;
+    padding-top: 6%;
     border-style: solid;
-    margin-right: 3%;
+    margin-right: 2%;
     border-radius: 20px;
     text-decoration: underline;
 }
-
-#raum_u {
-    margin: auto;
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    padding-left: auto;
-    padding-top: 17%;
-    padding-bottom: 17%;
-    font-size: 35pt;
-    font-family: 'Mohave', sans-serif;
-    border-radius: 20px;
-}
-
 
 a {
     text-decoration: none;
@@ -117,15 +104,43 @@ a {
 #btn_qrr {
     font-family: 'Mohave', sans-serif;
     font-size: 20pt;
-    margin-top: 15%;
+    margin-top: 10%;
+    text-align: center;
 }
 
 .qrbtn {
     font-family: 'Mohave', sans-serif;
     font-size: 15pt;
+
+    border: 2px solid black;
+    border-radius: 15pt;
+
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 0.5%;
+    padding-top: 0.5%;
+}
+
+.qrbtn:hover {
+    box-shadow: 0px 0px 10px gray;
+}
+
+.raum_e:hover {
+    box-shadow: 0px 0px 40px 5px gray;
 }
 
 #btn_qrT {
     color: black;
 }
 
+#placeholder {
+    padding-top: 10%;
+}
+
+#placeholder2 {
+    padding-top: 5%;
+}
+
+#splitbar {
+    width: 100%;
+}
