--- a/FullPHP/Styles/raum.css
+++ b/FullPHP/Styles/raum.css
@@ -75,19 +75,23 @@ body {
 }
 
 .tisch_e {
-    padding-right: 7%;
-    padding-bottom: 4%;
-    padding-left: 7%;
-    padding-top: 4%;
+    width: auto;
+    height: auto;
+    padding-bottom: 3.5%;
+    padding-right: 5.5%;
+    padding-left: 5.5%;
+    padding-top: 3.5%;
     border-style: solid;
     position: relative;
     border-radius: 15px;
-    margin-right: 4%;
+    margin-right: 2%;
 }
 
+.tisch_e:hover {
+    box-shadow: 0px 0px 40px 5px gray;
+}
 
-
-* > :nth-child(3n+3) { 
+* > :nth-child(5n+5) { 
     margin-right: 0% !important;
 }
 
