--- a/WebApp/Styles/raum.css
+++ b/WebApp/Styles/raum.css
@@ -89,6 +89,7 @@ body {
 
 .tisch_e:hover {
     box-shadow: 0px 0px 40px 5px gray;
+    transition: all 0.8s 0s ease;
 }
 
 * > :nth-child(5n+5) { 
