--- a/WebApp/Styles/tisch.css
+++ b/WebApp/Styles/tisch.css
@@ -174,9 +174,16 @@ body {
     padding-top: 0.5%;
 
     text-decoration: none;
+
+    transition: all 0.8s 0s ease;
 }
 
 .btn_table:hover {
+    box-shadow: 0px 0px 40px 5px gray;
+    transition: all 0.8s 0s ease;
+}
+
+.btn_table:hover::after {
     box-shadow: 0px 0px 40px 5px gray;
     transition: all 0.8s 0s ease;
 }
