--- a/WebApp/Styles/qrcode.css
+++ b/WebApp/Styles/qrcode.css
@@ -121,3 +121,10 @@ body {
 #eingabe_div {
     padding-bottom: 3%;
 }
+
+#ver {
+    text-align: left;
+    font-size: x-small;
+    font-family: 'Mohave', sans-serif;
+    width: 40px;
+}
