--- a/WebApp/Styles/raum.css
+++ b/WebApp/Styles/raum.css
@@ -115,11 +115,24 @@ a {
     padding-top: 0.5%;
 }
 
+#raumIdd {
+    text-align: left;
+    font-family: 'Mohave', sans-serif;
+    font-size: 20pt;
+    text-decoration: underline;
+}
+
 #raumId {
     text-align: center;
     font-family: 'Mohave', sans-serif;
     font-size: 20pt;
     text-decoration: underline;
+}
+
+#raumIdAuss {
+    padding-left: 20%;
+    padding-bottom: 5%;
+    margin: auto;
 }
 
 
