--- a/WebApp/Styles/qrcode.css
+++ b/WebApp/Styles/qrcode.css
@@ -173,3 +173,21 @@ body {
     from {opacity: 0;}
     to {opacity:1 ;}
 }
+
+
+#pic {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+
+#content {
+    position: relative;
+}
+
