--- a/WebApp/Styles/qrcode.css
+++ b/WebApp/Styles/qrcode.css
@@ -26,6 +26,7 @@ body {
 #container {
     background-color: white;
     width: 100%;
+    height: auto;
     margin: auto;
     text-align: center;
 }
