--- a/WebApp/Styles/raum.css
+++ b/WebApp/Styles/raum.css
@@ -28,7 +28,7 @@ body {
 #container {
     background-color: white;
     width: 100%;
-    height: 100%;
+    height: auto;
     margin: auto;
     padding-bottom: 10%;
 }
