--- a/WebApp/Styles/index.css
+++ b/WebApp/Styles/index.css
@@ -87,12 +87,15 @@ body {
 }
 
 .raum_e {
+    display: inline-block;
     padding-right: 9%;
     padding-bottom: 6%;
     padding-left: 9%;
     padding-top: 6%;
     border-style: solid;
-    margin-right: 2%;
+    margin-right: 1%;
+    margin-left: 1%;
+    margin-top: 2%;
     border-radius: 20px;
     text-decoration: underline;
 }
